--- a/Ch10_Collection/src/ch10/collection01/ch15/sec04/exam03/database.properties
+++ b/Ch10_Collection/src/ch10/collection01/ch15/sec04/exam03/database.properties
@@ -2,5 +2,5 @@ driver=oracle.jdbc.OracleDirver
 url=jdbc:oracle:thin:@localhost:1521:orcl
 username=scott
 password=tiger
-admin=\uD64D\uAE38\uB3D9
-
+admin=\uC548\uB155
+greeting=\uAC10\uC0AC\uD569\uB2C8\uB2E4
